WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160917
Heap::collectAllGarbage() should work with JSC_useImmortalObjects=true.
https://bugs.webkit.org/show_bug.cgi?id=160917
Summary
Heap::collectAllGarbage() should work with JSC_useImmortalObjects=true.
Mark Lam
Reported
2016-08-16 15:41:35 PDT
If we do an synchronous GC when JSC_useImmortalObjects=true, we'll get an RELEASE_ASSERT failure: $ JSC_useImmortalObjects=true jsc
>>> gc()
Trace/BPT trap: 5 We should fix this.
Attachments
proposed patch.
(1.89 KB, patch)
2016-08-16 15:48 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
proposed patch: fixed style issues.
(1.88 KB, patch)
2016-08-16 15:52 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-08-16 15:48:13 PDT
Created
attachment 286218
[details]
proposed patch.
WebKit Commit Bot
Comment 2
2016-08-16 15:50:06 PDT
Attachment 286218
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/heap/Heap.cpp:1084: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 3
2016-08-16 15:52:13 PDT
Created
attachment 286220
[details]
proposed patch: fixed style issues.
WebKit Commit Bot
Comment 4
2016-08-16 17:20:18 PDT
Comment on
attachment 286220
[details]
proposed patch: fixed style issues. Clearing flags on attachment: 286220 Committed
r204542
: <
http://trac.webkit.org/changeset/204542
>
WebKit Commit Bot
Comment 5
2016-08-16 17:20:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug